--- a/app/src/main/res/layout/dialog_custom_progressbar.xml
+++ b/app/src/main/res/layout/dialog_custom_progressbar.xml
@@ -15,6 +15,6 @@
         style="@style/Widget.MaterialComponents.CircularProgressIndicator.Small"
         android:layout_gravity="center"
         app:trackCornerRadius="24dp"
-        app:indicatorColor="@color/colorAccent"/>
+        app:indicatorColor="@color/light_blue"/>
 
 </androidx.cardview.widget.CardView>
