--- a/app/src/main/res/layout/dialog_internet.xml
+++ b/app/src/main/res/layout/dialog_internet.xml
@@ -52,6 +52,7 @@
             android:layout_marginTop="32dp"
             android:text="Ulanish"
             android:textAllCaps="false"
+            app:backgroundTint="@color/colorAccent"
             android:textColor="@color/white"
             app:cornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
