--- a/app/src/main/res/layout/fragment_create_marja_order.xml
+++ b/app/src/main/res/layout/fragment_create_marja_order.xml
@@ -166,7 +166,8 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/order_marja_btn_order"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                app:backgroundTint="@color/colorAccent"
+                android:layout_height="50dp"
                 android:layout_margin="12dp"
                 app:cornerRadius="8dp"
                 android:text="@string/buyurtma_berish"/>
