--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -153,9 +153,8 @@
 
             <include
                 layout="@layout/progress_button"
-                android:layout_height="50dp"
-                android:layout_width="match_parent"/>
-
+                android:layout_width="match_parent"
+                android:layout_height="45dp" />
 
 
         </LinearLayout>
