--- a/app/src/main/res/layout/adapter_stream.xml
+++ b/app/src/main/res/layout/adapter_stream.xml
@@ -9,6 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -34,7 +35,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:padding="4dp"
+            android:padding="6dp"
             android:src="@drawable/ic_menu_delete_white_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +44,7 @@
         <TextView
             android:id="@+id/adapter_stream_price"
             android:layout_width="0dp"
-            android:layout_height="14dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
@@ -72,6 +73,7 @@
             app:layout_constraintTop_toTopOf="@+id/adapter_stream_price" />
 
         <com.google.android.material.button.MaterialButton
+            app:cornerRadius="8dp"
             app:layout_constraintTop_toBottomOf="@+id/adapter_stream_price"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +88,10 @@
             app:icon="@drawable/ic_telegram"
             app:iconSize="16dp"
             app:iconGravity="textEnd" />
+
+
+
+
 
         <TextView
             android:id="@+id/simple_tv"
@@ -102,7 +108,7 @@
         <RelativeLayout
             android:id="@+id/relative_simple"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
@@ -150,7 +156,7 @@
 
             <ImageView
                 android:id="@+id/adapter_stream_link_simple_btn"
-                android:layout_width="100dp"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/link_copy_button"
@@ -160,28 +166,46 @@
 
         </RelativeLayout>
 
+        <com.google.android.material.button.MaterialButton
+            app:layout_constraintTop_toBottomOf="@+id/relative_simple"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:cornerRadius="8dp"
+            android:layout_marginHorizontal="16dp"
+            app:backgroundTint="@color/light_blue"
+            android:id="@+id/adapter_stream_link_simple_tg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/oddiy_telegram_posti"
+            android:textSize="9sp"
+            app:icon="@drawable/ic_telegram"
+            app:iconSize="16dp"
+            app:iconGravity="textEnd" />
+
+
+
         <TextView
             android:id="@+id/special_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="@string/mahsus_sahifa"
             android:textColor="@color/gray"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relative_simple" />
+            app:layout_constraintTop_toBottomOf="@+id/adapter_stream_link_simple_tg" />
 
         <RelativeLayout
             android:id="@+id/relative_special"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/link_layout_bg"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/special_tv">
@@ -226,7 +250,7 @@
 
             <ImageView
                 android:id="@+id/adapter_stream_link_special_btn"
-                android:layout_width="100dp"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/link_copy_button"
@@ -235,6 +259,24 @@
                 app:tint="@color/white" />
 
         </RelativeLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_marginBottom="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/relative_special"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:cornerRadius="8dp"
+            android:layout_marginHorizontal="16dp"
+            app:backgroundTint="@color/light_blue"
+            android:id="@+id/adapter_stream_link_special_tg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/mahsus_telegram_posti"
+            android:textSize="9sp"
+            app:icon="@drawable/ic_telegram"
+            app:iconSize="16dp"
+            app:iconGravity="textEnd" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
