--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -25,6 +25,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/info_btnOk"
             android:layout_marginTop="24dp"
+            app:backgroundTint="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ok"
