--- a/app/src/main/res/layout/dialog_positive_negative.xml
+++ b/app/src/main/res/layout/dialog_positive_negative.xml
@@ -53,6 +53,7 @@
             android:text="@string/orqaga"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            app:backgroundTint="@color/colorAccent"
             app:cornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
