--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="lightGray">#B1B1B1</color>
     <color name="gray">#676666</color>
 <!--    <color name="colorAccent">#76A6F0</color>-->
-    <color name="colorAccent">#189BD6</color>
+    <color name="colorAccent">#fc9208</color>
     <color name="colorSecondary">#1d1c1c</color>
     <color name="background_color">#EBEAEF</color>
     <color name="background_color_on_item">#FFFFFF</color>
