--- a/app/src/main/res/layout/adapter_stream_statistics.xml
+++ b/app/src/main/res/layout/adapter_stream_statistics.xml
@@ -7,6 +7,16 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/adapter_stat_numbers"
+        android:padding="4dp"
+        style="@style/tableTextStyle"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:text="#"
+        android:gravity="center"
+        android:textAlignment="center"/>
+
+    <TextView
         android:id="@+id/adapter_stat_Nomi"
         android:padding="4dp"
         style="@style/tableTextStyle"
