--- a/app/src/main/res/layout/dialog_custom_progressbar.xml
+++ b/app/src/main/res/layout/dialog_custom_progressbar.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-    app:cardElevation="4dp"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:cardElevation="0dp"
     app:cardCornerRadius="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:padding="16dp"
+        android:id="@+id/spin_kit"
+        style="@style/SpinKitView.Large.Wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:SpinKit_Color="@color/white" />
+
     <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:visibility="gone"
         android:id="@+id/custom_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
