--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,8 +8,8 @@
     android:background="@color/background_color"
     android:orientation="vertical">
 
-
     <RelativeLayout
+        android:background="@color/colorAccent"
         android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="70dp">
@@ -18,7 +18,8 @@
             android:id="@+id/home_search_tv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="16dp"
             android:background="@drawable/curved_search_bg"
             android:paddingRight="16dp"
             app:drawableEndCompat="@drawable/ic_baseline_search_24"
