--- a/app/src/main/res/layout/fragment_top_product.xml
+++ b/app/src/main/res/layout/fragment_top_product.xml
@@ -1,36 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:background="@color/background_color"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="30dp"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:text="@string/qiziqarli_mahsulotlar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="12dp"
-        android:id="@+id/top_product_recyclerview"
+    <RelativeLayout
+        android:background="@color/background_color_light"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/qiziqarli_mahsulotlar"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp"
+            android:id="@+id/top_product_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt1"
+            android:layout_marginTop="12dp" />
+
+
+
+    </RelativeLayout>
 
     <TextView
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="30dp"
+        android:id="@+id/txt2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="12dp"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/black"
         android:text="@string/barcha_mahsulotlar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+
 
 </LinearLayout>
