--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,12 +15,13 @@
     <color name="lightGrayAlpha">#8DCFCFCF</color>
     <color name="lightGray">#B1B1B1</color>
     <color name="gray">#676666</color>
-<!--    <color name="colorAccent">#76A6F0</color>-->
     <color name="colorAccent">#fc9208</color>
     <color name="colorSecondary">#1d1c1c</color>
     <color name="background_color">#EBEAEF</color>
+    <color name="background_color_light">#F6F6F6</color>
     <color name="background_color_on_item">#FFFFFF</color>
-    <color name="light_blue">#189BD6</color>
+    <color name="light_blue">#8649ff</color>
+<!--    <color name="light_blue">#189BD6</color>-->
 
 
 
