--- a/app/src/main/res/layout/adapter_stream.xml
+++ b/app/src/main/res/layout/adapter_stream.xml
@@ -73,6 +73,7 @@
             app:layout_constraintTop_toTopOf="@+id/adapter_stream_price" />
 
         <com.google.android.material.button.MaterialButton
+            android:visibility="gone"
             app:cornerRadius="8dp"
             app:layout_constraintTop_toBottomOf="@+id/adapter_stream_price"
             app:layout_constraintStart_toStartOf="parent"
@@ -94,6 +95,7 @@
 
 
         <TextView
+            android:textStyle="bold"
             android:id="@+id/simple_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -186,6 +188,7 @@
 
 
         <TextView
+            android:textStyle="bold"
             android:id="@+id/special_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
