--- a/app/src/main/res/layout/fragment_stream_sold_statistic.xml
+++ b/app/src/main/res/layout/fragment_stream_sold_statistic.xml
@@ -30,9 +30,20 @@
                     android:id="@+id/adapter_stat_tartib_raqami"
                     android:padding="4dp"
                     style="@style/tableTextStyle"
-                    android:layout_width="32dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:text="#"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:textColor="@color/white"
+                    android:id="@+id/adapter_stat_operator"
+                    android:padding="4dp"
+                    style="@style/tableTextStyle"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/operator"
                     android:gravity="center"
                     android:textAlignment="center"/>
 
@@ -43,7 +54,7 @@
                     style="@style/tableTextStyle"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/jami"
+                    android:text="@string/oqim"
                     android:gravity="center"
                     android:textAlignment="center"/>
 
